<resources>
    <string name="app_name">MoviesApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyMovies App</string>
    <string name="nav_header_subtitle">By: Aleem Sultan, Z23432896</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Search</string>
    <string name="menu_gallery">Favorites</string>
    <string name="menu_slideshow">Account</string>

    <string name="home_second">Home Second</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="type_movie">Movie</string>
    <string name="type_show">Series</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register_account">Register New Account</string>
    <string name="register">Register</string>
    <string name="login_back">Back to Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="userinfo">Logged in as\t</string>
    <string name="logout">Logout</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="results_title">Results</string>
    <string name="poster">Poster</string>
    <string name="detail_title">Title</string>
    <string name="date">Date</string>
    <string name="rating">Rating</string>
    <string name="runtime">Runtime</string>
    <string name="actors">Actors</string>
    <string name="plot">Plot</string>
    <string name="director">Director</string>
    <string name="imdb">IMDB Rating</string>
    <string name="genre">Genre</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="remove_favorite">Remove from Favorites</string>
    <string name="refresh">Refresh</string>
    <string name="apptitle">MyMovies App</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>
