<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="387dp"
        android:layout_height="697dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="253dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="322dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/poster"
                    tools:srcCompat="@android:drawable/ic_menu_gallery" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="112dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/detail_title"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/date"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/rating"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/runtime"
                        android:layout_width="match_parent"
                        android:layout_height="39dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/runtime"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/actors"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/actors"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/plot"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/director"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/director"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/imdb"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/imdb"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/genre"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/favorite" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>