<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <TextView
        android:id="@+id/apptitle3"
        android:layout_width="278dp"
        android:layout_height="71dp"
        android:layout_marginTop="80dp"
        android:text="@string/apptitle"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="340dp"
        android:layout_height="372dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="704dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/title"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="152dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/year"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="80dp"
                android:layout_height="21dp"
                android:text="@string/type_movie" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="85dp"
                android:layout_height="21dp"
                android:layout_marginStart="16dp"
                android:text="@string/type_show" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="40dp"
            android:text="@string/search" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>